--- a/sabliere/services.html
+++ b/sabliere/services.html
@@ -9,12 +9,13 @@ layout: default
   </div>
 </div>
 
-<ul class="produits__list">
+<ul class="content__list">
   {% for service in site.services %}
-    <li class="produits__item">
-      <h3>{{ service.number }}—</h3>
+    <li class="services__item content__list-item">
       <h2 class="produits__title">{{ service.title }}</h2>
+      <br>
       <p>{{ service.description }}</p>
+      {{ service.extra }}
     </li>
   {% endfor %}
 </ul>
