--- a/sabliere/index.html
+++ b/sabliere/index.html
@@ -15,53 +15,49 @@ layout: default
 <div class="content">
   <div class="split">
     <div class="split__content">
-      <h2>Des produits pour tous vos projets</h2><br>
+      <h2>Des produits pour tous vos projets</h2>
       <p>Une grande variété de produits est disponible pour tous les besoins</p>
-      <ul class="list--arrow">
-        <li class="list--arrow-item">Sable A (MG-112)</li>
-        <li class="list--arrow-item">Pierre naturelle de rivière</li>
-        <li class="list--arrow-item">Sable B</li>
-        <li class="list--arrow-item">Pierre concassée</li>
-        <li class="list--arrow-item">Sable abrasif ou tamisé</li>
-        <li class="list--arrow-item">Béton recyclé</li>
+      <ul class="arrow-list">
+        <li class="arrow-list__item">Sable A (MG-112)</li>
+        <li class="arrow-list__item">Pierre naturelle de rivière</li>
+        <li class="arrow-list__item">Sable B</li>
+        <li class="arrow-list__item">Pierre concassée</li>
+        <li class="arrow-list__item">Sable abrasif ou tamisé</li>
+        <li class="arrow-list__item">Béton recyclé</li>
       </ul>
-      <div class="home__button">
-        <a href="/produits" class="button--1">Voir tous nos produits</a>
-      </div>
+      <a href="/produits" class="button">Voir tous nos produits</a>
     </div>
     <div class="split__image--1"></div>
   </div>
   <div class="split">
     <div class="split__image--2"></div>
     <div class="split__content">
-      <h2>Des services variés</h2><br>
+      <h2>Des services variés</h2>
       <p>Une grande variété de services est disponible pour tous les besoins</p>
-      <ul class="list--arrow">
-        <li class="list--arrow-item">Transport</li>
-        <li class="list--arrow-item">Location d'équipement</li>
-        <li class="list--arrow-item">Pesée publique</li>
-        <li class="list--arrow-item">Autocueillette</li>
+      <ul class="arrow-list">
+        <li class="arrow-list__item">Transport</li>
+        <li class="arrow-list__item">Location d'équipement</li>
+        <li class="arrow-list__item">Pesée publique</li>
+        <li class="arrow-list__item">Autocueillette</li>
       </ul>
-      <div class="home__button">
-        <a href="/services" class="button--1">Voir tous nos services</a>
-      </div>
+      <a href="/services" class="button">Voir tous nos services</a>
     </div>
   </div>
   <div class="split">
     <div class="split__content">
-      <h2>Un emplacement de choix</h2><br>
+      <h2>Un emplacement de choix</h2>
       <p>Accès direct par l'autoroute 125.</p>
       <br>
       <h2>Sablière Clark</h2>
-      <p>1483 Chemin Dufresne</p>
-      <p>Notre-Dame De La Merci</p>
+      <p>
+        1483 Chemin Dufresne<br>
+        Notre-Dame De La Merci
+      </p>
       <div class="inline">
         <img src="/assets/images/phone-icon-blue.svg" alt="">
         <a>(819) 424-5133</a>
       </div>
-      <div class="home__button">
-        <a href="/contact" class="button--1">Contactez-nous</a>
-      </div>
+      <a href="/contact" class="button">Contactez-nous</a>
     </div>
     <div class="split__image--3"></div>
   </div>
