--- a/sabliere/ouverture-compte.html
+++ b/sabliere/ouverture-compte.html
@@ -14,7 +14,7 @@ layout: default
       <p class="split-text">Si vous voulez une liste de prix ou vous avez besoin d'une soumission
          pour un projet en particulier, faites-nous parvenir votre demande par
           courriel.</p>
-      <a href="/contact" class="button--1">Contactez-nous</a>
+      <a href="/contact" class="button">Contactez-nous</a>
     </div>
     <div class="split-item">
       <h2>Ouverture de compte</h2>
@@ -22,7 +22,7 @@ layout: default
       de remplir au préalable notre formulaire et nous le retourner
     par <a href="sabliereclark@gmail.com">courriel</a> dans les plus brefs
   délais pour que nous puissions traiter votre demande rapidement.</p>
-      <a href="#" class="button--1">Télécharger le formulaire (PDF)</a>
+      <a href="#" class="button">Télécharger le formulaire (PDF)</a>
     </div>
   </div>
 </div>
