--- a/sabliere/index.html
+++ b/sabliere/index.html
@@ -48,8 +48,9 @@ layout: default
       <h2>Un emplacement de choix</h2>
       <p>Accès direct par l'autoroute 125.</p>
       <br>
-      <h2>Sablière Clark</h2>
+      <h2></h2>
       <p>
+        <b>Sablière Clark</b><br>
         1483 Chemin Dufresne<br>
         Notre-Dame De La Merci
       </p>
