--- a/sabliere/compagnie.html
+++ b/sabliere/compagnie.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="banner ouverture-banner">
+<div class="banner compagnie-banner">
   <div class="title">
     <h1 class="black-highlight">Notre</h1>
     <h1 class="blue-highlight">entreprise</h1>
