--- a/sabliere/contact.html
+++ b/sabliere/contact.html
@@ -14,11 +14,13 @@ layout: default
     <ul class="contact__list">
       <li class="contact__list-item">
         <h2>Sablière Clark</h2>
-        <p>1483 Chemin Dufresne</p>
-        <p>Notre-Dame De La Merci</p>
+        <p>
+          1483 Chemin Dufresne<br>
+          Notre-Dame De La Merci
+        </p>
         <div class="inline">
           <img src="/assets/images/phone-icon-blue.svg" alt="">
-          <a>(819) 424-5133</a>
+          <a href="tel:819-424-5133">(819) 424-5133</a>
         </div>
         <div class="inline">
           <img src="/assets/images/email-icon-blue.svg" alt="">
@@ -30,7 +32,7 @@ layout: default
         <p>Directeur des opérations</p>
         <div class="inline">
           <img src="/assets/images/phone-icon-blue.svg" alt="">
-          <a>(514) 821-4242</a>
+          <a href="tel:514-821-4242">(514) 821-4242</a>
         </div>
       </li>
       <li class="contact__list-item">
@@ -38,23 +40,25 @@ layout: default
         <p>Vice-président</p>
         <div class="inline">
           <img src="/assets/images/phone-icon-blue.svg" alt="">
-          <a>(514) 821-4406</a>
+          <a href="tel:514-821-4406">(514) 821-4406</a>
         </div>
       </li>
     </ul>
     <ul class="contact__list">
       <li class="contact__list-item contact__list-item-right">
         <h2>Excavation Marcel Clark inc.</h2>
-        <p>505 rue Léon Martel</p>
-        <p>Terrebonne, Québec</p>
-        <p>J6W 2J9</p>
+        <p>
+          505 rue Léon Martel<br>
+          Terrebonne, Québec<br>
+          J6W 2J9
+        </p>
         <div class="inline">
           <img src="/assets/images/phone-icon-blue.svg" alt="">
-            <a>(450) 471-4985</a>
+            <a href="450-471-4985">(450) 471-4985</a>
         </div>
         <div class="inline">
           <img src="/assets/images/fax-icon.svg" alt="">
-            <a>(450) 471-4985</a>
+            <a href="450-492-5082">(450) 492-5082</a>
         </div>
         <div class="inline">
           <img src="/assets/images/email-icon-blue.svg" alt="">
@@ -67,7 +71,7 @@ layout: default
         <p>Comptabilité</p>
         <div class="inline">
           <img src="/assets/images/phone-icon-blue.svg" alt="">
-          <a>(450) 964-2425</a>
+          <a href="450-964-2425">(450) 964-2425</a>
         </div>
       </li>
       <li class="contact__list-item contact__list-item-right">
