--- a/sabliere/ouverture-compte.html
+++ b/sabliere/ouverture-compte.html
@@ -22,7 +22,7 @@ layout: default
       de remplir au préalable notre formulaire et nous le retourner
     par <a href="sabliereclark@gmail.com">courriel</a> dans les plus brefs
   délais pour que nous puissions traiter votre demande rapidement.</p>
-      <a href="#" class="button">Télécharger le formulaire (PDF)</a>
+      <a href="/assets/ouverture-de-compte.pdf" target="_blank" class="button">Télécharger le formulaire (PDF)</a>
     </div>
   </div>
 </div>
