--- a/sabliere/produits.html
+++ b/sabliere/produits.html
@@ -9,15 +9,17 @@ layout: default
   </div>
 </div>
 
-<ul class="content__list">
-  {% for produit in site.produits %}
-    <li class="content__list-item">
-      <h2 class="produits__title">{{ produit.title }}</h2>
-      {% if produit.info != '' %}
-        <h3 class="produits__info">{{ produit.info }}</h3>
-      {% endif %}
-      <p>{{ produit.description }}</p>
-      {{ produit.extra }}
-    </li>
-  {% endfor %}
-</ul>
+<div class="content">
+  <ul class="content__list">
+    {% for produit in site.produits %}
+      <li class="content__list-item">
+        <h2 class="produits__title">{{ produit.title }}</h2>
+        {% if produit.info != '' %}
+          <h3 class="produits__info">{{ produit.info }}</h3>
+        {% endif %}
+        <p>{{ produit.description }}</p>
+        {{ produit.extra }}
+      </li>
+    {% endfor %}
+  </ul>
+</div>
